Fix mobile sections overlapping
This is not a perfect fix, to do so would require to restructurate the whole css.

--- a/Desarrollo web/WebPersonal/style.css
+++ b/Desarrollo web/WebPersonal/style.css
@@ -360,9 +360,19 @@ header p {
 }
 
 @media (max-width: 480px) {
+    .stack-item {
+        width: 3rem;
+        height: 3rem;
+    }
+
     .stack-item img {
-        width: 4rem; /* Más pequeño para pantallas pequeñas */
-        height: 4rem;
+        width: 100%;
+        height: 100%;
+    }
+
+    .stack-grid {
+        row-gap: 3rem;
+        column-gap: 1rem;
     }
 
     .h2-stack {
